# PlayerWithFFmpegSDL

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/osshare/player/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: includes.h  logger.h  media_player.cpp  media_player.h  player.h
app/src/main/java/com/osshare/player/: MainActivity.java
app/src/main/java/com/osshare/player/base/: AbsActivity.java  AppConfig.java  AppUtils.java  BaseActivity.kt
app/src/main/java/org/libsdl/app/: SDLActivity.java  SDLControllerManager.java
app/src/main/jniLibs/includes/sdl2/: SDL_main.h
app/src/main/res/values/: strings.xml
app/src/test/java/com/osshare/player/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
